--- a/app/src/main/res/layout/book_view.xml
+++ b/app/src/main/res/layout/book_view.xml
@@ -3,16 +3,18 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <android.support.v7.widget.AppCompatImageView
         android:id="@+id/image_iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/title_tv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="bottom" />
+        android:background="#99000000"
+        android:textColor="@android:color/white"
+        android:layout_gravity="bottom" />
 </android.support.v7.widget.CardView>
