--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ntk.ehcrawler.activities.HomeActivity"
-    tools:showIn="@layout/app_bar_home">
+    tools:context="com.ntk.ehcrawler.activities.GalleryActivity"
+    tools:showIn="@layout/activity_gallery">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/gallery_thumbnails_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-</android.support.constraint.ConstraintLayout>
+
+</android.support.v4.widget.NestedScrollView>
