--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="thumb_width">200dp</dimen>
+    <dimen name="thumb_height">200dp</dimen>
+    <dimen name="space">4dp</dimen>
+    <dimen name="app_bar_height">360dp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
