--- a/app/src/main/res/layout/content_gallery.xml
+++ b/app/src/main/res/layout/content_gallery.xml
@@ -11,6 +11,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gallery_thumbnails_rv"
         android:adjustViewBounds="true"
+        android:background="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
