--- a/app/src/main/res/layout/page_view.xml
+++ b/app/src/main/res/layout/page_view.xml
@@ -2,15 +2,23 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <android.support.v7.widget.AppCompatImageView
-        android:id="@+id/image_iv"
-        android:adjustViewBounds="true"
-        android:background="@android:color/black"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/image_iv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:adjustViewBounds="true"
+            android:background="@android:color/black" />
+    </ScrollView>
+
     <ProgressBar
         android:id="@+id/loading"
-        android:layout_gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 </FrameLayout>
