--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -60,7 +60,12 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_gallery" />
-
+    <ProgressBar
+        android:id="@+id/loading"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
