--- a/app/src/main/res/layout/book_view.xml
+++ b/app/src/main/res/layout/book_view.xml
@@ -9,18 +9,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/space"
-        android:background="@android:color/white"
+        android:background="@android:color/background_dark"
         app:cardCornerRadius="4dp">
 
         <android.support.v7.widget.LinearLayoutCompat
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/image_iv"
                 android:layout_width="@dimen/thumb_width"
-                android:layout_height="@dimen/thumb_height"
-                android:background="@android:color/background_light" />
+                android:layout_height="@dimen/thumb_height" />
 
             <android.support.v7.widget.LinearLayoutCompat
                 android:orientation="vertical"
@@ -46,5 +45,10 @@
             android:layout_gravity="bottom"
             android:background="@color/overlay"
             android:textColor="@android:color/white" />
+        <ProgressBar
+            android:id="@+id/loading"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </android.support.v7.widget.CardView>
 </FrameLayout>
