--- a/app/src/main/res/layout/page_view.xml
+++ b/app/src/main/res/layout/page_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -11,14 +12,24 @@
             android:id="@+id/image_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adjustViewBounds="true"
-            android:background="@android:color/black" />
+            android:adjustViewBounds="true" />
     </ScrollView>
 
-    <ProgressBar
+    <FrameLayout
         android:id="@+id/loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <Button
+        android:id="@+id/reload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|bottom"
+        android:text="load other image source"/>
+    </FrameLayout>
 </FrameLayout>
