--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/new_books"
+        android:title="Books"
+        android:icon="@android:drawable/ic_menu_compass"
+        app:showAsAction="collapseActionView|ifRoom" />
+    <item android:id="@+id/favorite_books"
+        android:title="Favorite"
+        android:icon="@android:drawable/ic_menu_agenda"
+        app:showAsAction="collapseActionView|ifRoom" />
+
     <item android:id="@+id/search"
-        android:title=""
+        android:title="Search"
         android:icon="@android:drawable/ic_menu_search"
         app:showAsAction="collapseActionView|ifRoom" />
 </menu>
