fix down folder characters

--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -28,40 +28,41 @@
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-            <android.support.v7.widget.LinearLayoutCompat
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
                 <android.support.v7.widget.LinearLayoutCompat
                     android:orientation="vertical"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/title_tv"
-                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                    <android.support.v7.widget.AppCompatTextView
-                        android:id="@+id/details_tv"
-                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
+
+                    <android.support.v7.widget.LinearLayoutCompat
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <android.support.v7.widget.LinearLayoutCompat
+                            android:orientation="vertical"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="match_parent">
+                        <android.support.v7.widget.AppCompatTextView
+                            android:id="@+id/details_tv"
+                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </android.support.v7.widget.LinearLayoutCompat>
                     <android.support.v7.widget.AppCompatTextView
                         android:id="@+id/tags_tv"
                         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content" />
-
+                    </android.support.v7.widget.LinearLayoutCompat>
                 </android.support.v7.widget.LinearLayoutCompat>
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/cover_iv"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent" />
-            </android.support.v7.widget.LinearLayoutCompat>
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
