--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -10,4 +10,31 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_gravity="right">
+
+
+        <ImageButton
+            android:id="@+id/button_next"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_play"
+            android:alpha="0.3"
+            android:layout_gravity="end|center"/>
+
+        <ImageButton
+            android:id="@+id/button_action"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/button"
+            android:src="@drawable/ic_exit"
+            android:alpha="0.3"
+            android:layout_gravity="end|bottom"/>
+    </LinearLayout>
+
+
 </FrameLayout>
