--- a/app/src/main/res/layout/activity_fullscreen.xml
+++ b/app/src/main/res/layout/activity_fullscreen.xml
@@ -17,24 +17,15 @@
         android:orientation="vertical"
         android:layout_gravity="right">
 
-
-        <ImageButton
-            android:id="@+id/button_next"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:src="@drawable/ic_play"
-            android:alpha="0.3"
-            android:layout_gravity="end|center"/>
-
-        <ImageButton
-            android:id="@+id/button_action"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/button"
-            android:src="@drawable/ic_exit"
-            android:alpha="0.3"
-            android:layout_gravity="end|bottom"/>
     </LinearLayout>
 
-
+    <TextView
+        android:id="@+id/current_page"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|top"
+        android:textColor="@color/colorAccent"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
+        android:background="@color/colorPrimaryDark"
+        android:alpha="0.7"/>
 </FrameLayout>
