--- a/app/src/main/res/layout/post_view.xml
+++ b/app/src/main/res/layout/post_view.xml
@@ -30,8 +30,7 @@
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone"/>
+        android:layout_height="match_parent"/>
 
     <ImageButton
         android:id="@+id/show_more_view"
@@ -42,4 +41,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"/>
 
+    <TextView
+        android:id="@+id/comment_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="comments"
+        android:background="@color/black_overlay"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 </android.support.constraint.ConstraintLayout>
