--- a/app/src/main/res/layout/post_view.xml
+++ b/app/src/main/res/layout/post_view.xml
@@ -7,22 +7,18 @@
     android:layout_height="wrap_content"
     android:adjustViewBounds="true"
     android:minHeight="@dimen/thumb_height">
-    <com.github.chrisbanes.photoview.EHPhotoView
-        android:id="@+id/image_iv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:minHeight="@dimen/thumb_height"
-        android:scaleType="centerCrop"/>
 
     <com.volokh.danylo.video_player_manager.ui.VideoPlayerView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:minHeight="@dimen/thumb_height"
         />
-
+    <com.github.chrisbanes.photoview.EHPhotoView
+        android:id="@+id/image_iv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:id="@+id/gif_text"
