--- a/app/src/main/res/layout/post_view.xml
+++ b/app/src/main/res/layout/post_view.xml
@@ -8,16 +8,19 @@
     android:adjustViewBounds="true"
     android:minHeight="@dimen/thumb_height">
 
-    <com.volokh.danylo.video_player_manager.ui.VideoPlayerView
+    <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        app:auto_show="false"
+        app:surface_type="texture_view"
+        app:use_controller="false"
+        app:resize_mode="fixed_width"/>
     <com.github.chrisbanes.photoview.EHPhotoView
         android:id="@+id/image_iv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
+        android:adjustViewBounds="true"
         android:scaleType="centerCrop"/>
 
     <TextView
@@ -33,7 +36,9 @@
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
     <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
         android:id="@+id/progress"
+        android:max="100"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
@@ -55,4 +60,10 @@
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"/>
+
+    <View
+        android:id="@+id/cover_view"
+        android:layout_width="match_parent"
+        android:background="@android:color/transparent"
+        android:layout_height="match_parent"/>
 </android.support.constraint.ConstraintLayout>
