--- a/app/src/main/res/layout/activity_reactor.xml
+++ b/app/src/main/res/layout/activity_reactor.xml
@@ -22,4 +22,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
+    <TextView
+        android:id="@+id/debug_text"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/text_margin"
+        android:text=""
+        android:gravity="top"
+        />
+
 </android.support.constraint.ConstraintLayout>
